--- a/bot01/app/.env
+++ b/bot01/app/.env
@@ -1,7 +1,10 @@
 
 # Tokens
-TOKEN_TELEGRAM=<Seu Token do Bot Telegram>
-TOKEN_CHATGPT3=<Seu Token do ChatGPT>
+#TOKEN_TELEGRAM=<Seu Token do Bot Telegram>
+#TOKEN_CHATGPT3=<Seu Token do ChatGPT>
+
+TOKEN_TELEGRAM=6094179905:AAGXXFvcg_w-vC7cqCXilNNdAYs_CZdFNqU
+TOKEN_CHATGPT3=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
 
 # REDIS Database 
 REDIS_HOST=bot-redis
